# cheminova-backend

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  bump-version.sh  compose.yml  manage.py  pyproject.toml  requirements.in  requirements.txt  tasks.py
cheminova/: api_endpoints.py  middleware.py  urls.py  wsgi.py
cheminova/settings/: base.py  dev.py  dev_compose.py  production.py
cheminova/templates/: base.html
config/mc/: config.json.example
config/nginx/: nginx.conf
custom_images/: models.py  serializers.py  views.py
custom_images/migrations/: 0001_initial.py  0002_alter_customimage_api_upload.py  0003_alter_customimage_api_upload.py  0004_rename_api_upload_customimage_hidden.py  0005_rename_hidden_customimage_public.py  0006_remove_customimage_public.py
experience/: models.py  serializers.py  views.py
experience/migrations/: 0001_initial.py  0002_welcome_site_name_characteroverview.py  0003_alter_welcome_description.py  0005_photographyscreen_yourcollection_and_more.py  0006_introsearchandcollect_header.py  0009_remove_yourcollection_image_description_1_and_more.py  0010_alter_photographyscreen_description.py  0011_characteroverview_background_image_and_more.py
home/: models.py  serializers.py  views.py
home/migrations/: 0001_initial.py  0002_remove_home_description.py  0003_alter_home_image.py
image_auth/: tests.py  urls.py  views.py
image_upload/: serializers.py  urls.py  views.py
mc/: config.json
nginx/: nginx.conf
src/: command.py
src/cheminova/: urls.py
src/custom_images/: models.py  serializers.py  urls.py  (+1 more)
(+85 files in other folders)
