[project]
name = "backend"
version = "1.6.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["gunicorn", "psycopg2-binary", "wagtail"]

[dependency-groups]
dev = ["ruff>=0.11.7"]

[tool.ruff]
exclude = [".venv", ".git", ".vscode", "__pycache__"]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["I"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
